force-app/main/default/objects/Course_Duration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <externalId>true</externalId>
        <label>Course Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Unit__c</fullName>
        <label>Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Duration Overrides</relationshipLabel>
        <relationshipName>Course_Durations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <label>Unit Set Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Duration Override</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Unit_Set_Code__c</columns>
        <columns>Duration__c</columns>
        <columns>Duration_Unit__c</columns>
        <columns>Active__c</columns>
        <columns>External_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Duration Override Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duration Overrides</pluralLabel>
    <recordTypes>
        <fullName>Duration</fullName>
        <active>true</active>
        <label>Duration</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>